# midi2idim

./: .gitignore  .gitmodules  Cargo.toml  build.rs  midi2idim.code-workspace  midi2idim_c.h  package.json  readme.md  tsconfig.json
midi_ci/: Cargo.toml  cbindgen.toml
midi_ci/src/: lib.rs  main.rs  midi_1.rs  midi_2.rs  midi_ci.rs  midiv1.rs  midiv2.rs
midi_ci/src/midi_ci/: constants_definitions.rs  decode.rs  defs.rs  parser.rs  profile_configuration.rs  protocol_negotiation.rs
midi_ci/tests/: unit_tests.rs
midi_ci/tools/midi_ascii/: anotherdayshinragm2.mid  mid2asc  out.txt
midi_ci/tools/midi_ascii/src/: mid2asc.c
src/: addition.test.ts  addition.ts  lib.rs  main.rs  main.ts  midi_ci.rs  midi_events.ts  midi_input.eventbus.ts  midi_output.eventbus.ts  readstream.ts
src/midi-ci/: midi-ci.c  midi-ci.ts
src/midi_ci/: capability_inquiry.rs  constants_definitions.rs  discovery_transaction.rs
tests/: unit_tests.rs
tools/midi_ascii/: asc2mid
tools/midi_ascii/src/: asc2mid.c
